resolver problema overflow numeros no display

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
 }
 
 #display{
+    overflow: hidden;
     position: absolute;
     margin: 10px;
     background-color: rgb(243, 240, 240);
